docs/api/qiskit/0.43/qiskit.circuit.CircuitInstruction.md
---
title: CircuitInstruction
description: API reference for qiskit.circuit.CircuitInstruction
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.CircuitInstruction
---

# CircuitInstruction

<span id="qiskit.circuit.CircuitInstruction" />

`CircuitInstruction(operation, qubits=(), clbits=())` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/quantumcircuitdata.py "view source code")

Bases: `object`

A single instruction in a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"), comprised of the [`operation`](#qiskit.circuit.CircuitInstruction.operation "qiskit.circuit.CircuitInstruction.operation") and various operands.

<Admonition title="Note" type="note">
  There is some possible confusion in the names of this class, [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction"), and [`Operation`](qiskit.circuit.Operation "qiskit.circuit.Operation"), and this class’s attribute [`operation`](#qiskit.circuit.CircuitInstruction.operation "qiskit.circuit.CircuitInstruction.operation"). Our preferred terminology is by analogy to assembly languages, where an “instruction” is made up of an “operation” and its “operands”.

  Historically, [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") came first, and originally contained the qubits it operated on and any parameters, so it was a true “instruction”. Over time, [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") became responsible for tracking qubits and clbits, and the class became better described as an “operation”. Changing the name of such a core object would be a very unpleasant API break for users, and so we have stuck with it.

  This class was created to provide a formal “instruction” context object in `QuantumCircuit.data`, which had long been made of ad-hoc tuples. With this, and the advent of the [`Operation`](qiskit.circuit.Operation "qiskit.circuit.Operation") interface for adding more complex objects to circuits, we took the opportunity to correct the historical naming. For the time being, this leads to an awkward case where [`CircuitInstruction.operation`](#qiskit.circuit.CircuitInstruction.operation "qiskit.circuit.CircuitInstruction.operation") is often an [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") instance ([`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") implements the [`Operation`](qiskit.circuit.Operation "qiskit.circuit.Operation") interface), but as the [`Operation`](qiskit.circuit.Operation "qiskit.circuit.Operation") interface gains more use, this confusion will hopefully abate.
</Admonition>

<Admonition title="Warning" type="caution">
  This is a lightweight internal class and there is minimal error checking; you must respect the type hints when using it. It is the user’s responsibility to ensure that direct mutations of the object do not invalidate the types, nor the restrictions placed on it by its context. Typically this will mean, for example, that [`qubits`](#qiskit.circuit.CircuitInstruction.qubits "qiskit.circuit.CircuitInstruction.qubits") must be a sequence of distinct items, with no duplicates.
</Admonition>

## Methods

<span id="qiskit-circuit-circuitinstruction-copy" />

### copy

<span id="qiskit.circuit.CircuitInstruction.copy" />

`CircuitInstruction.copy()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/quantumcircuitdata.py "view source code")

Return a shallow copy of the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction").

**Return type**

[*CircuitInstruction*](qiskit.circuit.CircuitInstruction "qiskit.circuit.quantumcircuitdata.CircuitInstruction")

<span id="qiskit-circuit-circuitinstruction-replace" />

### replace

<span id="qiskit.circuit.CircuitInstruction.replace" />

`CircuitInstruction.replace(operation=None, qubits=None, clbits=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/quantumcircuitdata.py "view source code")

Return a new [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction") with the given fields replaced.

**Return type**

[*CircuitInstruction*](qiskit.circuit.CircuitInstruction "qiskit.circuit.quantumcircuitdata.CircuitInstruction")

## Attributes

<span id="qiskit.circuit.CircuitInstruction.operation" />

### operation

`Operation`

The logical operation that this instruction represents an execution of.

<span id="qiskit.circuit.CircuitInstruction.qubits" />

### qubits

`Tuple[Qubit, ...]`

A sequence of the qubits that the operation is applied to.

<span id="qiskit.circuit.CircuitInstruction.clbits" />

### clbits

`Tuple[Clbit, ...]`

A sequence of the classical bits that this operation reads from or writes to.

